2008-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.15.2 release.

2008-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* README:
	Removed the smooth engine from the README.

2008-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c:
	Include stdio.h. (bug #543608, Rodrigo Moya)

2008-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	Removes unnecessary CairoColor cast to fix build on solaris.
	(bug #535456, patch by Damien Carbery)

2008-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_option):
	Remove dead code found by coverity (bug #501734, Kjartan Maraas)

2008-07-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/Makefile.am:
	* schema/smooth.xml.in.in:
	Forgot to remove the schema.

2008-07-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* COPYING:
	* configure.ac:
	* engines/Makefile.am:
	* engines/smooth/*:
	* test/Makefile.am:
	* test/gtkrcs/smooth:
	Removed the smooth engine from gtk-engines.

2008-07-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Industrial/gtk-2.0/gtkrc:
	Move the progress bar match in the style. This fixes the
	network-manager applet.

2008-07-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box_gap):
	Fill the gap in notebook correctly (bug #542625).

2008-06-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw*.c:
	(*_draw_list_view_header):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	Change the header button position enum to be a bitfield.
	(Bug #511958, Marcus Brinkmann)

2008-06-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade):